# ordered-parallel-iterator

./: Cargo.toml  README.md
examples/: ex1.rs
src/: lib.rs
