[package]
name = "ordered-parallel-iterator"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
description = """
Performs tasks in parallel returning completed tasks in order of appearance.
"""
homepage = "https://github.com/kilork/ordered-parallel-iterator"
repository = "https://github.com/kilork/ordered-parallel-iterator"
readme = "README.md"
keywords = ["parallel", "iterator", "threads", "ordered"]
license = "Unlicense OR MIT"
edition = "2018"

[dependencies]
crossbeam = "0.7"
num_cpus = "1.10"
std-semaphore = "0.1"
